--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "matplotlib>=3.10.8",
     "numpy>=2.3.5",
     "pandas>=2.3.3",
+    "pingouin>=0.5.5",
     "plotly>=6.5.0",
     "scipy>=1.16.3",
     "seaborn>=0.13.2",
