--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "kaggle>=1.8.2",
     "matplotlib>=3.10.8",
     "numpy>=2.3.5",
+    "openpyxl>=3.1.5",
     "pandas>=2.3.3",
     "pingouin>=0.5.5",
     "plotly>=6.5.0",
